[package]
name = "bear-cipher"
version = "0.1.0"
edition = "2024"

[features]
zeroize = ["dep:zeroize", "blake3/zeroize"]

[dependencies]
blake3 = { version = "1.8.3" }
chacha20 = "0.10.0"
cipher = "0.5.1"
hybrid-array = "0.4.7"
zeroize = { version = "1.8.2", features = ["derive"], optional = true }

[dev-dependencies]
rand = "0.10.0"
